--- a/cat/carne/flamenquinescordobese.html
+++ b/cat/carne/flamenquinescordobese.html
@@ -48,31 +48,38 @@
 		<div class="container mx-auto">
 			<div class="card border-0 shadow my-5">
 				<div class="card-header p-5 ">
-					<h1>FLAMENQUINES CORDOBESES</h1>
+					<h1>CARNE CON TOMATE</h1>
 				</div>
 				<div>
 					<div class="card-body">
 												<!--Falta Imagen-->
-					<img src="../../img/flamenquines.jpg" alt="Flamenquines" class="img-fluid rounded mx-auto d-block">
+					<img src="../../img/carnecontomate.jpg" alt="carne con tomate" class="img-fluid rounded mx-auto d-block">
 					</div>
 					<div class="card-body">
 					<h3>INGREDIENTES (4 personas):</h3>
 					<ul>
-						<li>4 filetes de lomo de cerdo</li>
-						<li>4 lochas de jamón serrano</li>
-						<li>4 lonchas de queso tipo sandwich</li>
-						<li>Sal y pimienta</li>
-						<li>Aceite de oliva</li>
+						<li>500 gr de carne de ternera cortada en tacos de bocado.</li>
+						<li>2 cebollas.</li>
+						<li>2 dientes de ajo.</li>
+						<li>1 hoja de laurel.</li>
+						<li>500 gr de tomate triturado.</li>
+						<li>50 ml de vino tinto.</li>
+						<li>Nuez moscada molida.</li>
+						<li>Aceite de oliva y sal.</li>
 					</ul>
 					</div>
 					<div class="card-body">
 					<h3>ELABORACIÓN:</h3>
-					<p><strong>1.-</strong> Ponemos cada filete, o cada chuleta de cerdo, sobre papel film o papel transparente de cocina. Encima, colocamos otra lamina del mismo tamaño y con un martillo, vamos golpenado los filetes, para enternecerlos un poco. Si no dispones de un martillo de cocina, puedes hacerlo con un vaso que tenga una base dura.</p>
-					<p><strong>2.-</strong> Quitamos el papel transparente y ahora, a cada rollito le ponemos una pequeña cantidad de sal y de pimienta negra recién molida. Después, sobre ellos, ponemos una loncha de jamón y otra de queso. Puedes emplear el jamón y el queso que quieras. Desde jamón serrano, a jamón york y desde queso de sandwich, a queso manchego.</p>
-					<p><strong>3.-</strong> Enrollamos todo el conjunto. Pero lo vamos a hacer por lo ancho del filete, no a lo largo. Así, nos aseguramos tener un rollito bien largo. Lo hacemos de tal manera que el relleno quede bien encerrado en el interior del cerdo. Una vez hecho y para asegurarnos que vuelve a abrirse, podemos clavarle un palillo, que lo sujete bien.</p>
-					<p><strong>4.-</strong> Ahora pasamos cada flamenquin por harina. Después por huevo batido y finalmente por pan rallado. Después, volvemos a pasar por huevo y por pan rallado. Con esto de pasarlo dos veces por el huevo y el pan lograremos dos cosas. La primera, tener una capa exterior más crujiente. La segunda, que el relleno quede mejor encerrado y por tanto más asegurado.</p>
-					<p><strong>5.-</strong> Una vez bien empanado, lo ponemos en un plato. y una vez que hayamos empanado todos los flamenquines, los metemos en el congelador durante alrededor de 10 minutos, o 1 hora en la nevera. Con este «frío» que le estamos dando, nos aseguramos que el empanado se asiente bien sobre el filete de cerdo.</p>
-					<p><strong>6.-</strong> Freímos en abundante aceite caliente. Y lo hacemos durante unos 3 minutos. hasta que los flamenquines estén dorados por fuera. No olvides ponerlo sobre papel absorbente, antes de servir. Y el palillo, ahora sería el momento de retirarlo aunque, puedes presentarlo con él, sin problemas.</p>
+					<p><strong>1.-</strong> Corta la carne de ternera en tacos de tamaño de bocado si es que no lo han hecho en la carnicería, y salpiméntalos.</p>
+					<p><strong>2.-</strong> Yo voy a utilizar mi olla a presión pero puedes utilizar una olla normal, más abajo te daré los tiempos de ambas.</p>
+					<p><strong>3.-</strong> Pon la olla a fuego medio con un poco de aceite y, cuando esté caliente, echa los tacos de ternera. Cocínalos para que se vayan dorado por todos sus lados</p>
+					<p><strong>4.-</strong> Mientras seguimos preparando el resto de ingredientes. Pela y pica muy finitos los dientes de ajo</p>
+					<p><strong>5.-</strong> Pela las cebollas y córtala primero en tiras y después en trocitos pequeños.</p>
+					<p><strong>6.-</strong> Cuando hayas sacado la carne echa los ajos y las cebollas y cocínalos a fuego bajo unos 10 minutos, hasta que la cebolla esté tierna y transparente y esté empezando a dorarse.</p>
+					<p><strong>7.-</strong> Sube el fuego y echa el vino tinto. Mezcla un poco y espera 2 o 3 minutos hasta que se evapore el alcohol.</p>
+					<p><strong>8.-</strong> Pica muy finito o directamente tritura el tomate si es natural, y después también puedes colarlo si no quieres encontrarte con pieles ni pepitas.</p>
+					<p><strong>9.-</strong> Ahora baja un poco el fuego e incorpora el tomate a la olla junto con la hoja de laurel, nuez moscada molida a tu gusto y la ternera. Si la carne no quedara prácticamente cubierta añade un poco de agua, aunque normalmente no hace falta.</p>
+					<p><strong>10.-</strong> pon el fuego alto y cuando empiece a hervir bájalo para que esté suave, tapa la olla y deja que se cueza todo junto durante aproximadamente una hora, que será el momento en el que la carne de ternera esté tierna. </p>
 					</div>
 				</div>
 			</div>
