--- a/cat/carne/index.html
+++ b/cat/carne/index.html
@@ -29,7 +29,7 @@
 						<a class="text-warning nav-link" href="../../index.html">Inicio</a>
 					</li>
 					<li class="nav-item">
-						<a class="text-warning nav-link" href="../carne/flamenquinescordobese.html">| Flamenquines</a>
+						<a class="text-warning nav-link" href="../carne/flamenquinescordobese.html">| Carne con tomate</a>
 					</li>
 					<li class="nav-item">
 						<a class="text-warning nav-link" href="../carne/lomoalhorno.html">Lomo al Horno |</a>
@@ -54,35 +54,33 @@
                     <div class="row">
                         						<!--Falta Imagen-->
 
-                        <a class="col-xs col-md-6" href="flamenquinescordobese.html"><img src="../../img/flamenquines.jpg"
+                        <a class="col-xs col-md-6" href="flamenquinescordobese.html"><img src="../../img/carnecontomate.jpg"
                                 alt="Flamenquines_cordobeses" class="col-12 rounded img-fluid"></a>
                         <div class="row col-xs col-md-6">
                         <a class="col" href="flamenquinescordobese.html">
-                            <p class="col display-4 m-5 text-center card-header p-5">Flamenquines cordobeses</p>
+                            <p class="col display-4 m-5 text-center card-header p-5">Carne con tomate</p>
                         </a>
-                        <p>Seguro que has oído hablar de los flamenquines cordobeses. Es una
-                            receta muy facil de hacer que voy a mostrar a continuación cómo preparar, paso a paso. Los
-                            flamenquines son un filete de lomo de cerdo, o una chuleta deshuesada, rellena de jamón y
-                            queso. Suelen venir presentados en forma de rollito, en vez del típico filete empanado sin
-                            más, como podría ser el escalope o el cachopo. Su elaboración no representa ninguna
-                            dificultad.</p>
+                        <p>La carne con tomate es una receta tradicional muy típica de la gastronomía andaluza
+                            y se suele preparar con carne de cerdo o con carne de ternera.Se prepara de forma 
+                            muy sencilla y el reposo le sienta genial así que te animo a que la prepares de un día para otro. 
+                            Para comerla no pueden faltar unas buenas rebanadas de pan para no dejar ni gota de 
+                            la riquísima salsa de tomate casera que la acompaña.
+                        </p>
                         </div>
 
                         <p class="col-12"></p>
 
                         						<!--Falta Imagen-->
 
-                        <a class="col-xs col-md-6" href="lomoalhorno.html"><img src="../../img/lomo.jpg" alt="Lomo"
+                        <a class="col-xs col-md-6" href="lomoalhorno.html"><img src="../../img/solomilloalapimienta.jpg" alt="Lomo"
                                 class="col-12 rounded img-fluid"></a>
                                 <div class="row col-xs col-md-6">
                         <a class="col" href="lomoalhorno.html">
-                            <p class="col display-4 m-5 text-center card-header p-5">Lomo al horno</p>
+                            <p class="col display-4 m-5 text-center card-header p-5">Solomillo de cerdo a la pimienta</p>
                         </a>
-                        <p>El lomo al horno es una forma estupenda de preparar esta carne de
-                            cerdo. No quedará tan seco como si estuviese frito. Además, aquí utilizaremos una sencilla
-                            técnica para que conserve todos sus jugos en el horno. Tan sencillo como envolver el lomo en
-                            papel de aluminio, antes de meterlo al horno. Veamos como realizar esta receta de lomo al
-                            horno.</p>
+                        <p>Un plato que ha caído en olvido pero que es una de las recetas más fáciles y rápidas preparadas con solomillo.
+                            Para este plato me gusta prepararlo con solomillo de cerdo, pues queda una carne muy jugosa y suave, 
+                            que acompañada con una salsa de mojar pan y no parar, siempre triunfa.</p>
                         </div>
                     </div>
                 </div>
