--- a/cat/carne/lomoalhorno.html
+++ b/cat/carne/lomoalhorno.html
@@ -48,33 +48,32 @@
 		<div class="container mx-auto">
 			<div class="card border-0 shadow my-5">
 				<div class="card-header p-5 ">
-					<h1>LOMO AL HORNO</h1>
+					<h1>SOLOMILLO A LA PIMIENTA</h1>
 				</div>
 				<div>
 					<div class="card-body">
 												<!--Falta Imagen-->
 
-					<img src="../../img/lomo.jpg" alt="Filetes de lomo" class="img-fluid rounded mx-auto d-block">
+					<img src="../../img/solomilloalapimienta.jpg" alt="Solomillo a la pimienta" class="img-fluid rounded mx-auto d-block">
 					</div>
 					<div class="card-body">
 					<h3>INGREDIENTES (4 personas):</h3>
 					<ul>
-						<li>Una cinta de lomo de cerdo de alrededor de 1’5kg</li>
-						<li>4 dientes de ajo</li>
-						<li>Una cucharadita de tomillo</li>
-						<li>Una cucharadita de pimentón dulce</li>
-						<li>Una cucharadita de romero</li>
-						<li>Sal y pimienta</li>
-						<li>Un chorrito de aceite de oliva</li>
+						<li>2 solomillos de cerdo</li>
+						<li>2 cucharadas  de pimienta verde (la que viene en tarro con líquido)</li>
+						<li>150 ml de brandy o de vino oloroso (hay quién le pone whisky)</li>
+						<li>400 ml de nata líquida para cocinar o leche evaporada</li>
+						<li>Sal</li>
+						<li>Aceite de oliva virgen extra</li>
 					</ul>
 					</div>
 					<div class="card-body">
 					<h3>ELABORACIÓN:</h3>
-					<p><strong>1.-</strong> Lo primero es preparar un majao. Ponemos en un mortero el tomillo, el romero, el pimentón dulce el ajo troceado y un chorrito de aceite de oliva. Lo aplastamos hasta que quede todo aplastado e integrado.</p>
-					<p><strong>2.-</strong>  Ponemos un trozo grande de papel de aluminio sobre una bandeja de horno. Encima colocamos el lomo sin trocear. Ahora, con la ayuda de una cuchara, colocamos el majao sobre el lomo. Que lo cubra bien. Después, ponemos encima sal y pimienta.</p>
-					<p><strong>3.-</strong> Cerramos y tapamos el lomo con el papel de alumino. Hay que dejar dentro una burbuja de aire asi que, no es necesario que lo «estrujes». Con que lo cubras y lo cierres, es suficiente</p>
-					<p><strong>4.-</strong> Metemos la bandeja con el lomo tapado al horno, precalentado a 200ºC. En unos 45 minutos estará cocinado.</p>
-					<p><strong>5.-</strong> Lo sacamos y dejamos que repose 5 minutos. Después, le quitamos el papel de aluminio, lo trinchamos en rodajas finas y lo emplatamos. ¡A disfrutar!</p>
+					<p><strong>1.-</strong> Lo primero Con el cuchillo retiramos el exceso de grasa del solomillo y cortamos en medallones.</p>
+					<p><strong>2.-</strong> Ponemos en una sartén un poco de aceite de oliva virgen extra, los medallones de carne y con un poco de sal y la pimienta verde, cocinamos la carne por ambos lados.</p>
+					<p><strong>3.-</strong> Añadimos el brandy, podemos flambear o dejarlo unos minutos para que se evapore el alcohol.</p>
+					<p><strong>4.-</strong> Incorporamos la nata líquida para cocinar y mezclamos bien moviendo la sartén.</p>
+					<p><strong>5.-</strong> Dejamos que se cocine hasta que la salsa se reduzca.!</p>
 					</div>
 				</div>
 			</div>
