--- a/cat/oriental/index.html
+++ b/cat/oriental/index.html
@@ -32,7 +32,7 @@
 						<a class="text-warning nav-link" href="../carne/index.html">Carnes</a>
 					</li>
 					<li class="nav-item">
-						<a class="text-warning nav-link" href="../oriental/rollitosdeprimavera.html">| Rollitos de Primavera</a>
+						<a class="text-warning nav-link" href="../oriental/rollitosdeprimavera.html">| Tarta de queso</a>
 					</li>
                     <li class="nav-item">
 						<a class="text-warning nav-link" href="../oriental/tallarinescongambas.html">Tallarines Con Gambas |</a>
@@ -49,39 +49,36 @@
         <div class="container-fluid">
             <div class="card border-0 shadow my-5">
                 <div class="row card-body p-5">
-                    <p class="col font-weight-light text-center display-2 card-header p-5">ORIENTAL</p>
+                    <p class="col font-weight-light text-center display-2 card-header p-5">POSTRES</p>
 
                     <div class="row">
                         						<!--Falta Imagen-->
 
                         <a class="col-xs col-md-6" href="rollitosdeprimavera.html"><img
-                                src="../../img/rollitosdeprimavera.jpg" alt="Flamenquines_cordobeses"
+                                src="../../img/tartadequeso.jpg" alt="Tarta de queso"
                                 class="col-12 rounded"></a>
                         <div class="row col-xs col-md-6">
                             <a class="col" href="rollitosdeprimavera.html">
-                                <p class="col display-4 m-5 text-center card-header p-5">Rollitos de primavera</p>
+                                <p class="col display-4 m-5 text-center card-header p-5">Tarta de queso</p>
                             </a>
-                            <p>Una receta oriental para todos los públicos. No vamos a utilizar ingredientes raros, ni
-                                vas a tener la sensación de tener que ir a un restaurante de comida china a por ellos.
-                                Estos rollitos están rellenos de verduras muy sabrosas, económicas y fáciles de
-                                encontrar: zanahoria, berza, cebolla y brotes de soja. Y los vamos a hacer al horno para
-                                evitar grasas, por lo que esta receta es también saludable y apta para personas
-                                vegetarianas.</p>
+                            <p>Esta  receta que os traigo hoy es una de nuestras recetas de postres favoritas,
+                                las primeras referencias escritas que se tienen de una tarta de queso son de la 
+                                Antigua Grecia, eran un rico aporte proteico a base de queso y realmente el sabor 
+                                de la receta original difiere mucho de las que hacemos hoy en día, la receta original se extendió por Europa, los inmigrantes 
+                                que viajaron a América la trasladaron allí  y de hay derivaron las recetas de hoy en día.
+                            </p>
                         </div>
 
                         <p class="col-12"></p>
 						<!--Falta Imagen-->
 
                         <a class="col-xs col-md-6" href="tallarinescongambas.html"><img
-                                src="../../img/tallarinescongambas.jpg" alt="Lomo" class="col-12 rounded"></a>
+                                src="../../img/coulant.jpg" alt="Lomo" class="col-12 rounded"></a>
                         <div class="row col-xs col-md-6">
                             <a class="col" href="tallarinescongambas.html">
-                                <p class="col display-4 m-5 text-center card-header p-5">Tallarines con gambas</p>
+                                <p class="col display-4 m-5 text-center card-header p-5">Coulant de chocolate</p>
                             </a>
-                            <p>Receta facil. Hoy vamos a volver a preparar nuestra propia comida china en casa. Lo bueno
-                                que tiene este tipo de platos, además de estar deliciosos, es que son muy fáciles de
-                                hacer y que necesitan de pocos ingredientes, todos a mano de todo el mundo, y que se
-                                hacen de una manera rápida.</p>
+                            <p>Estos coulant de chocolate, también llamados volcán de chocolate, son una de las recetas más fáciles y deliciosas para los auténticos chocolateros, con su cascada de chocolate caliente y líquido brotando del interior, y encima súper fáciles de preparar. Tan solo tienes que cogerle el truquillo a tu horno para acertar con los minutos de cocción y ¡listo!</p>
                         </div>
                     </div>
                 </div>
