--- a/cat/oriental/rollitosdeprimavera.html
+++ b/cat/oriental/rollitosdeprimavera.html
@@ -31,7 +31,7 @@
 						<a class="text-warning nav-link" href="../carne/index.html">Carnes</a>
 					</li>
 					<li class="nav-item">
-						<a class="text-warning nav-link" href="#">| Rollitos de Primavera</a>
+						<a class="text-warning nav-link" href="#">| Tarta de queso</a>
 					</li>
                     <li class="nav-item">
 						<a class="text-warning nav-link" href="../oriental/tallarinescongambas.html">Tallarines Con Gambas |</a>
@@ -48,36 +48,33 @@
 		<div class="container mx-auto">
 			<div class="card border-0 shadow my-5">
 				<div class="card-header p-5 ">
-					<h1>ROLLITOS DE PRIMAVERA AL HORNO</h1>
+					<h1>Tarta de queso</h1>
 				</div>
 				<div>
 					<div class="card-body">
 						<!--Falta Imagen-->
-					<img src="../../img/rollitosdeprimavera.jpg" alt="Rollitos de primavera" class="img-fluid rounded mx-auto d-block">
+					<img src="../../img/tartadequeso.jpg" alt="Rollitos de primavera" class="img-fluid rounded mx-auto d-block">
 					</div>
 					<div class="card-body">
 					<h3>INGREDIENTES (4 personas):</h3>
 					<ul>
-						<li>Hojas de pasta filo (también llamado papel brick o papel de arroz)</li>
-						<li>500g de brotes de soja embotados</li>
-						<li>2 zanahorias</li>
-						<li>1 cebolla</li>
-						<li>1/2 berza</li>
-						<li>100ml de salsa de soja</li>
-						<li>2 dientes de ajo</li>
-						<li>Sal</li>
-						<li>Aceite de oliva</li>
+						<li>2 paquetes de galletas</li>
+						<li>100 gr. de mantequilla (temperatura ambiente)</li>
+						<li>1 paquete de cacahuetes con miel</li>
+						<li>400 gr. de nata liquida para montar 35% materia grasa</li>
+						<li>100 gr. de azúcar</li>
+						<li>2 sobres de cuajada</li>
+						<li>500 gr de queso de untar</li>
+						<li>Mermelada</li>
 					</ul>
 					</div>
 					<div class="card-body">
 					<h3>ELABORACIÓN:</h3>
-					<p><strong>1.-</strong> En primer lugar lavamos la berza. Vamos a lavar también los brotes de soja ayudándonos con un colador para eliminar también el líquido restante. Cortamos la zanahoria y la cebolla en juliana (en finas tiras) y picamos la berza y los dientes de ajo.</p>
-					<p><strong>2.-</strong> Ahora vamos a preparar el relleno de los rollitos de primavera al horno. Para ello añadimos un chorrito de aceite en una sartén amplia o wok y la ponemos a fuego fuerte. Añadimos en primer lugar la zanahoria junto con un poco de sal y la salteamos. Pasados 2 o 3 minutos la zanahoria se habrá ablandado ligeramente y podremos continuar.</p>
-					<p><strong>3.-</strong> Manteniendo el fuego fuerte, añadimos la berza, la cebolla, el ajo y los brotes de soja. Añadimos un poco de sal y continuamos salteando todas las verduras con frecuencia durante aproximadamente 10 minutos, hasta que todo se ablande y se dore por completo.</p>
-					<p><strong>4.-</strong> Ahora vamos a añadirle la salsa de soja y a continuar salteando durante otros 5 minutos, hasta que el líquido de las verduras y la soja haya desaparecido de la sartén. Eso significará que las verduras habrán absorbido el líquido y el sabor de la salsa. Hecho esto apagamos el fuego y reservamos en un plato.</p>
-					<p><strong>5.-</strong> Listo el relleno, vamos a terminar los rollitos de primavera al horno. Para ello colocamos la pasta filo sobre una superficie plana y sobre ella ponemos algunas cucharadas del relleno. Dependiendo del tamaño de la pasta o papel podremos añadir más o menos cantidad, pero sin que rebose o será imposible plegar el rollito.</p>
-					<p><strong>6.-</strong> Plegamos sobre el relleno el extremo del rollito hasta que quede simplemente tapado y plegamos las puntas hacia arriba sobre el relleno para que no se nos escape por los lados. Hecho esto giramos el relleno hasta que se cierre por completo. De esta forma obtendremos un cilindro con el relleno en su interior.</p>
-					<p><strong>7.-</strong> Hecho esto colocamos los rollitos de primavera sobre una bandeja de horno, forrada en el fondo con papel de hornear, y los introducimos en el horno previamente calentado a 180º durante 15-20 minutos, hasta que se hayan dorado por completo.</p>
+					<p><strong>1.-</strong> Trocear las galletas en pequeñas porciones, hasta hacerlas polvo, mezclar con la mantequilla y los cacahuetes y formar una masa que nos sirva como base.</p>
+					<p><strong>2.-</strong> Colocar la masa creada con las galletas y la mantequilla en la base del molde, cubriendo toda la base de forma homogénea.</p>
+					<p><strong>3.-</strong> Dejar enfriar en la nevera unos 15/20 minutos serán suficientes para conseguir una base estable y fuerte.</p>
+					<p><strong>4.-</strong> Calentar la nata en un cazo a fuego lento, incorporar el azúcar y remover con la nata, el queso, incorporar las cuajadas, diluidas en un poco de leche. Remover todos los ingredientes, en el momento que la mezcla comienza a hervir, apartar del fuego. Echar en el molde con la base de galleta.Dejaremos enfriar en la nevera unas 6 horas aproximadamente.</p>
+					<p><strong>5.-</strong> Decorar la superficie de la tarta con mermelada de fresas. Des-moldaremos la tarta de queso y estará lista para degustar.</p>
 					</div>
 				</div>
 			</div>
