--- a/cat/oriental/tallarinescongambas.html
+++ b/cat/oriental/tallarinescongambas.html
@@ -48,37 +48,37 @@
 		<div class="container mx-auto">
 			<div class="card border-0 shadow my-5">
 				<div class="card-header p-5 ">
-					<h1>TALLARINES CHINOS CON GAMBAS</h1>
+					<h1>Coulant de chocolate</h1>
 				</div>
 				<div>
 					<div class="card-body">
 						<!--Falta Imagen-->
-					<img src="../../img/tallarinescongambas.jpg" alt="Tallarines con gambas" class="img-fluid rounded mx-auto d-block">
+					<img src="../../img/coulant.jpg" alt="Coulant" class="img-fluid rounded mx-auto d-block">
 					</div>
 					<div class="card-body">
 					<h3>INGREDIENTES (4 personas):</h3>
 					<ul>
-						<li>400g de tallarines</li>
-						<li>1 diente de ajo</li>
-						<li>1 zanahoria</li>
-						<li>1/2 cebolla</li>
-						<li>1 pimiento verde</li>
-						<li>1/2 cucharada de jengibre en polvo</li>
-						<li>1/2 cucharada de cayena en polvo</li>
-						<li>200g de gambas</li>
-						<li>De 50 a 100ml de salsa de soja</li>
-						<li>Sal y pimienta</li>
-						<li>Perejil o cilantro picado</li>
+						<li>4150 gr de chocolate para postres</li>
+						<li>150 gr de mantequilla sin sal.</li>
+						<li>4 huevos.</li>
+						<li>100 gr de azúcar.</li>
+						<li>70 gr de harina de trigo.</li>
+						<li>Helado a tu gusto para acompañar, opcional.</li>
 					</ul>
 					</div>
 					<div class="card-body">
 					<h3>ELABORACIÓN:</h3>
-					<p><strong>1.-</strong> Cocemos los tallarines.  Para ello, echamos un puñadito de sal en abundante agua hirviendo. Añadimos los tallarines y dejamos cocer unos 10 minutos. Hasta que queden «al dente». Para evitar que se peguen al fondo de la olla, removemos con frecuencia, especialmente al principio de la cocción</p>
-					<p><strong>2.-</strong> Una vez que estén cocidos, los escurrimos del agua y los dejamos reposar, mientras preparamos el resto de ingredientes</p>
-					<p><strong>3.-</strong> En un wok, o en una sartén amplia, ponemos un chorrito de aceite a fuego fuerte. Cuando esté caliente añadimos el ajo picado, la cebolla cortada en juliana (finas tiras), la zanahoria en cubos más o menos grandes y el pimiento cortado también en cubos aproximadamente del mismo tamaño. Salmpimentamos y cocinamos unos 4 minutos.</p>
-					<p><strong>4.-</strong> Añadimos las gambas peladas y volvemos a mezclar todo. Dejamos cocinar un par de minutos más, hasta que las gambas hayan cogido color</p>
-					<p><strong>5.-</strong> Pasado el tiempo, añadimos los tallarines, la salsa de soja, cantidad al gusto, el jengibre y la cayena. Con estos dos últimos ingredientes, mucho ojo ya que, son bastante picantes. Añade también cantidad al gusto. Mezclamos todos los ingredientes hasta que se hayan entremezclado bien.</p>
-					<p><strong>6.-</strong> Tan solo queda servir en platos y espolvorear con cilantro o perejil fresco picado</p>
+					<p><strong>1.-</strong> Pon en un bol el chocolate troceado y la mantequilla. Introduce el bol en el microondas durante un minuto a potencia máxima, saca el bol y remueve el contenido con una cuchara o espátula.</p>
+					<p><strong>2.-</strong> Vuelve a introducir en el microondas otro minuto, sácalo y revuélvelo todo de nuevo. Si aún no se ha derretido todo puedes poner el bol unos segundos más en el microondas, pero no te pases de tiempo porque si quemas el chocolate te amargará toda la mezcla, es mucho mejor ir poco a poco.</p>
+					<p><strong>3.-</strong> Cuando esté todo más o menos derretido, remueve con una cuchara o lengua de cocina hasta que la mezcla sea homogénea.</p>
+					<p><strong>4.-</strong> En otro bol bate los huevos con el azúcar con la ayuda de unas varillas hasta que el azúcar se haya disuelto y la mezcla sea espumosa y de un color claro.</p>
+					<p><strong>5.-</strong> Incorpora los huevos con el azúcar ya mezclados al bol con el chocolate y la mantequilla, y mézclalo todo bien.</p>
+					<p><strong>6.-</strong> Añade la harina tamizada, es decir, haciéndola pasar por un colador para que no caiga con grumos ni apelmazamientos, y remueve la mezcla para que quede homogénea.</p>
+					<p><strong>7.-</strong> Ahora vierte la mezcla en los moldes de silicona para coulant hasta cubrirlos un poco más de la mitad, y congélalos al menos 2 horas.</p>
+					<p><strong>8.-</strong> Cuando los vayas a preparar, precalienta el horno a 190ºC con calor arriba y abajo y ventilador, y cuando haya alcanzado esa temperatura introduce los coulant en él en una posición media sobre una bandeja de horno.</p>
+					<p><strong>9.-</strong> El tiempo de horneado es la clave para obtener el coulant perfecto y, sin embargo, necesitamos experimentar un poco antes de saber cuál es ya que cada horno es un mundo. Yo he necesitado unos 16-17 minutos para que estén listos los coulant, pero os recomiendo hacer una prueba con un coulant la primera vez y hornearlo ese tiempo. Si después del tiempo de reposo y haberlo desmoldado (te explico a continuación cómo hacerlo) está demasiado hecho, ya sabes que necesitas rebajar el tiempo 1 o 2 minutos, y si por el contrario está demasiado líquido y es complicado desmoldarlo sin romperlo, la próxima vez dale 1 o 2 minutos más.</p>
+					<p><strong>10.-</strong> Una vez horneados los coulant, sácalos del horno y déjalos reposar al menos 5 minutos. Una buena señal es que se vean cuajados aunque con el centro superior un poco más oscuro y «bailongo», y que se hayan separado de las paredes del molde.</p>
+					<p><strong>11.-</strong> Para desmoldar yo recomiendo la técnica usada para darles la vuelta a la tortilla (sobre todo para quienes nos gusta que el interior del coulant esté muy líquido): coloca un plato del revés encima del molde y dale rápidamente la vuelta, te deberá quedar perfecto en el plato.</p>
 					</div>
 				</div>
 			</div>
