--- a/cat/verdura/ensaladagarbanzos.html
+++ b/cat/verdura/ensaladagarbanzos.html
@@ -48,34 +48,34 @@
 		<div class="container mx-auto">
 			<div class="card border-0 shadow my-5">
 				<div class="card-header p-5 ">
-					<h1>ENSALADA DE GARBANZOS Y QUINOA</h1>
+					<h1>HUMMUS</h1>
 				</div>
 				<div>
 					<div class="card-body">
 						<!--Falta Imagen-->
-					<img src="../../img/ensaladadegarbanzos.jpg" alt="Ensalada de garbanzos y quinoa" class="img-fluid rounded mx-auto d-block">
+					<img src="../../img/hummus.jpg" alt="Ensalada de garbanzos y quinoa" class="img-fluid rounded mx-auto d-block">
 					</div>
 					<div class="card-body">
 					<h3>INGREDIENTES (4 personas):</h3>
 					<ul>
-						<li>250g de quinoa</li>
-						<li>150g de garbanzos</li>
-						<li>100g de guisantes</li>
-						<li>1 cebolla</li>
-						<li>1 tomate</li>
+						<li>400 g de garbanzos cocidos</li>
+						<li>1 cucharada grande de sésamo</li>
+						<li>2 dientes de ajo</li>
+						<li>3 cucharadas de aceite de oliva virgen extra</li>
+						<li>El zumo de un limón</li>
 						<li>El jugo de 1 limón</li>
-						<li>2 ramas de hierbabuena fresca</li>
-						<li>1 puñadito de perejil fresco</li>
-						<li>Sal y pimienta</li>
-						<li>Aceite de oliva</li>
+						<li>1 cucharada pequeña de comino en polvo/li>
+						<li>1 cucharada pequeña de sal</li>
+						<li>Pimentón de la Vera picante o dulce</li>
+						<li>Semillas de sésamo</li>
 					</ul>
-					</div>
+					</div>	
 					<div class="card-body">
 					<h3>ELABORACIÓN:</h3>
-					<p><strong>1.-</strong> En una olla a presión, ponemos a calentar a fuego medio una buena cantidad de agua y le añadimos un puñadito de sal. Lavamos y añadimos también los garbanzos, que habrán pasado la noche a remojo junto con un poco de bicarbonato. Dejamos que se cocinen durante 30 minutos, los escurrimos y los dejamos enfriar.</p>
-					<p><strong>2.-</strong> Mientras tanto, en una cazuela con abundante agua, añadimos un par de pizcas de sal y lo calentamos a fuego fuerte hasta que hierva. Añadimos la quinoa lavada y los guisantes, y dejamos que se cocinen aquí durante 15 minutos, removiendo de vez en cuando. Pasado este tiempo, escurrimos todo y lo reservamos.</p>
-					<p><strong>3.-</strong> Después, en una ensaladera amplia, ponemos el tomate y la cebolla cortados en trozos pequeños. Añadimos los garbanzos, la quinoa y los guisantes y lo mezclamos todo.</p>
-					<p><strong>4.-</strong> A continuación, ponemos en un recipiente el jugo del limón, un chorrete de aceite, la hierbabuena y el perejil bien picados. Lo mezclamos bien con un tenedor y se lo echamos por encima a la ensalada. Removemos para que se reparta bien el aliño, y… ¡a servir!</p>
+					<p><strong>1.-</strong> Si utilizamos garbanzos ya cocidos de bote, los enjuagamos muy bien bajo el grifo de agua fría hasta que desaparezca la espuma que hacen, los escurrimos y ponemos en el vaso de la batidora o en un cuenco amplio. Incorporamos los dientes de ajo pelados, si son grandes poned sólo uno, una cucharadita de sal, otra de cominos molidos, una cucharada de pasta se sésamo y un chorreón de aceite de oliva virgen extra, unas tres cucharadas.</p>
+					<p><strong>2.-</strong> Lo trituramos todo muy bien con la batidora, probadlo por si hace falta añadir algo más y servimos en un cuenco.</p>
+					<p><strong>3.-</strong> Espolvoreamos con un poco de pimentón, que si os gusta puede ser picante, unas semillas de sésamo y un poco de aceite de oliva virgen extra.</p>
+					<p><strong>4.-</strong> ervimos el hummus acompañado de pan de pita y nos comemos el hummus sobre trozos de pan de pita.</p>
 					</div>
 				</div>
 			</div>
