--- a/cat/verdura/index.html
+++ b/cat/verdura/index.html
@@ -53,35 +53,30 @@
 
                     <div class="row">
                         <a class="col-xs col-md-6" href="ensaladagarbanzos.html"><img
-                                src="../../img/ensaladadegarbanzos.jpg" alt="Ensalada_garbanzos"
+                                src="../../img/hummus.jpg" alt="Hummus"
                                 class="col-12 rounded"></a>
                         <div class="row col-xs col-md-6">
                             <a class="col" href="ensaladagarbanzos.html">
-                                <p class="col display-4 m-5 text-center card-header p-5">Ensalada de garbanzos</p>
+                                <p class="col display-4 m-5 text-center card-header p-5">Hummus</p>
                             </a>
-                            <p>Hoy vamos a preparar una ensalada fresquita. Eso sí, con tantos nutrientes y propiedades,
-                                que se puede convertir en un plato único. Esta ensalada de garbanzos y quinoa, es muy
-                                completa. En Cocina Casera y Fácil, hemos cocinado muchas ensaladas muy completas y
-                                deliciosas. Entre ellas, una ensalada de lentejas que gustó mucho y que te animo a
-                                visitar. La receta que hoy vamos a hacer contiene quinoa. Este cereal es un
-                                superalimento por que tiene todo lo que una persona necesita para su día a día.</p>
+                            <p> El hummus es un puré de garbanzos, muy saludable.
+                                Es bajo en grasa y rico en hierro, ácido fólico y vitaminas B6 y C. 
+                                Además, contiene mucha proteína, fibra, zinc y calcio, entre otras cosas. 
+                                Un plato muy fresquito y ligero.
+                            </p>
                         </div>
 
                         <p class="col-12"></p>
                         <!--FALTA IMAGEN-->
                         <a class="col-xs col-md-6" href="tempuradeverduras.html"><img
-                                src="../../img/tempuradeverduras.jpg" alt="Tempura_verduras" class="col-12 rounded"></a>
+                                src="../../img/espinacasalacrema.jpg" alt="Espinacas a la crema" class="col-12 rounded"></a>
                         <div class="row col-xs col-md-6">
                             <a class="col" href="tempuradeverduras.html">
-                                <p class="col display-4 m-5 text-center card-header p-5">Tempura de verduras</p>
+                                <p class="col display-4 m-5 text-center card-header p-5">Espinacas a la crema</p>
                             </a>
-                            <p>La tempura de verduras es una receta facil importada desde Japon. Consiste en «rebozar»
-                                unas verduras cortadas en tamaño de bocado, en una mezcla de harina, huevo y agua muy
-                                fría. Con este sistema, al contacto con el aceite caliente, el rebozado quedará
-                                crujiente y poco aceitoso. La tempura es de origen portugués, trasladado en tiempo
-                                lejano hasta oriente, donde cogió fama y desde donde ahora se ha extendido al resto del
-                                mundo. El resultado es sorprendente, ya que las verduras se cocinan lo suficiente en el
-                                poco tiempo que pasa en la fritura y quedan al dente y muy sabrosa.</p>
+                            <p>Estas espinacas a la crema gratinadas tienen un puntito cremoso que me encanta, 
+                                quedan muy suaves de sabor, y al salir del horno ves la delicia en la que se han 
+                                convertido con el queso por encima.</p>
                         </div>
                     </div>
                 </div>
