--- a/cat/verdura/tempuradeverduras.html
+++ b/cat/verdura/tempuradeverduras.html
@@ -34,10 +34,10 @@
 						<a class="text-warning nav-link" href="../oriental/index.html">Oriental</a>
 					</li>
 					<li class="nav-item">
-						<a class="text-warning nav-link" href="../verdura/ensaladagarbanzos.html">| Ensalada de Garbanzos</a>
+						<a class="text-warning nav-link" href="../verdura/ensaladagarbanzos.html">| Hummus</a>
 					</li>
                     <li class="nav-item">
-						<a class="text-warning nav-link" href="#">Tempura de Verduras |</a>
+						<a class="text-warning nav-link" href="#">Espinacas a la crema|</a>
 					</li>
 				</ul>
 			</div>
@@ -48,38 +48,34 @@
 		<div class="container mx-auto">
 			<div class="card border-0 shadow my-5">
 				<div class="card-header p-5 ">
-					<h1>TEMPURA DE VERDURAS</h1>
+					<h1>ESPINACAS A LA CREMA</h1>
 				</div>
 				<div>
 					<div class="card-body">
 						<!--FALTA IMAGEN-->
-					<img src="../../img/tempuradeverduras.jpg" alt="Tempura de verduras" class="img-fluid rounded mx-auto d-block">
+					<img src="../../img/espinacasalacrema.jpg" alt="Espinacas a la crema" class="img-fluid rounded mx-auto d-block">
 					</div>
 					<div class="card-body">
 					<h3>INGREDIENTES (4 personas):</h3>
 					<ul>
-						<li>2 alcachofas</li>
-						<li>1 berenjena</li>
-						<li>1/2 calabacín</li>
-						<li>2 zanahorias</li>
-						<li>4 espárragos trigueros</li>
-						<li>1/2 pimiento rojo</li>
-						<li>1/2 pimiento verde</li>
-						<li>1 huevo</li>
-						<li>200g de harina</li>
-						<li>300ml de agua</li>
-						<li>Pimienta negra</li>
-						<li>Sal</li>
-						<li>Aceite para freir</li>
+						<li>500 g de espinacas congeladas</li>
+						<li>1 brick de leche evaporada</li>
+						<li>1/2 cebolla</li>
+						<li>1 diente de ajo</li>
+						<li>Queso para gratinar</li>
+						<li>Sal y pimienta al gusto</li>
 					</ul>
 					</div>
 					<div class="card-body">
 					<h3>ELABORACIÓN:</h3>
-					<p><strong>1.-</strong> En primer lugar, vamos a cortar las verduras. Limpiamos las alcachofas, eliminando las puntas y dejando el corazón y las hojas más tiernas, y las cortamos en 4 partes. Cortamos la berenjena y el calabacín en rodajas de unos 4mm de grosor, las zanahorias laminadas y de tamaño de bocado, los espárragos trigueros partidos en cachos de unos 5cm y abiertos, y el pimiento rojo y el verde en cuadrados y también de tamaño de bocado.</p>
-					<p><strong>2.-</strong> A continuación vamos a preparar lo que será la tempura en sí. Para ello ponemos en un bol o recipiente amplio el agua, muy fría, junto con el huevo y la harina. Para mantener la mezcla a temperatura muy baja puedes añadir algunos cubitos de hielo. Echamos también una pizca generosa de sal y de pimienta y batimos con unas varillas hasta que todo se haya mezclado y no queden grumos.</p>
-					<p><strong>3.-</strong> Hecho esto, vamos introduciendo en esta tempura las verduras por tandas para que no tengamos dificultades a la hora de extraerlas. En un wok, freidora o recipiente amplio, añadimos una buena cantidad de aceite de freír (el suficiente como para que cubra las verduras durante la fritura) y lo calentamos a fuego fuerte.</p>
-					<p><strong>4.-</strong> Cuando el aceite esté caliente, añadimos las verduras por tandas. Para ello, las rescatamos de la tempura con un tenedor y las introducimos en el aceite caliente. Conviene hacerlas en tandas no muy grandes para evitar que el aceite se enfríe y que se peguen unas con otras. Las freímos durante unos 3 minutos, hasta que se hayan dorado.</p>
-					<p><strong>5.-</strong> Hecho esto, retiramos las verduras del aceite con una espumadera y las vamos colocando sobre una rejilla para que no se nos ablanden. Cuando hayamos frito toda la tempura de verduras, servimos inmediatamente.</p>
+					<p><strong>1.-</strong> En una sartén con un poquito de aceite ponemos la cebolla y el ajo picados a dorar.</p>
+					<p><strong>2.-</strong> Dejamos que se hagan unos minutos a fuego suave y cuando la cebolla se ponga transparente incorporamos las espinacas congeladas.</p>
+					<p><strong>3.-</strong> Vamos removiendo hasta que se deshagan y en ese momento echamos la leche evaporada.</p>
+					<p><strong>4.-</strong> Echamos sal y pimienta al gusto y dejamos cocinar unos minutos más.</p>
+					<p><strong>5.-</strong> Luego cogemos una fuente para horno y volcamos las espinacas a la crema, espolvoreándolas generosamente con el queso rallado. </p>
+					<p><strong>6.-</strong> El queso también va en gustos, podéis utilizar queso rallado de otro tipo. </p>
+					<p><strong>6.-</strong> Gratinamos en el horno a 200ºC hasta que la superficie del queso quede dorada. </p>
+
 					</div>
 				</div>
 			</div>
