--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 							</a>
 						</div>
 						<div class="card-body">
-						<img src="img/Lomoalhorno.jpg" class="img-fluid rounded mx-auto d-block" alt="Lomo">
+						<img src="img/solomilloalapimienta.jpg" class="img-fluid rounded mx-auto d-block" alt="solomilloalapimienta">
 						</div>
 						<div class="card-body">
 							<p class="text-center">¿Necesitas proteínas? Entonces este es tu sitio</p>
@@ -64,14 +64,14 @@
 					<div class="card-fluid">
 						<div class="card-header">
 							<a href="cat/oriental/index.html" class="img-fluid">
-								<h3 class="text-center">Oriental</h3>
+								<h3 class="text-center">Postres</h3>
 							</a>
 						</div>
 						<div class="card-body">
-						<img src="img/rollitosdeprimavera.jpg" class="img-fluid rounded mx-auto d-block" alt="Sushi">
+						<img src="img/coulant.jpg" class="img-fluid rounded mx-auto d-block" alt="Sushi">
 						</div>
 						<div class="card-body">
-							<p class="text-center">¿Ganas de algo más exótico? Mira y descubre nuevos sabores</p>
+							<p class="text-center">¿Ganas de algo dulce? Mira y descubre nuevos sabores</p>
 						</div>
 						</div>
 					<div class="card-fluid">
@@ -81,7 +81,7 @@
 							</a>
 						</div>
 						<div class="card-body">
-						<img src="img/ensaladadegarbanzos.jpg" class="img-fluid rounded mx-auto d-block" alt="ensalada">
+						<img src="img/hummus.jpg" class="img-fluid rounded mx-auto d-block" alt="hummus">
 						</div>
 						<div class="card-body">
 							<p class="text-center">¿Un poco de verde?</p>
